package es.tierno.daw.trasnferdaw.model.bbdd;

public enum Database {
    MARIADB, MOCK
}
